--- a/opps_poll/templates/opps_poll/poll_detail.html
+++ b/opps_poll/templates/opps_poll/poll_detail.html
@@ -1,9 +1,14 @@
 {% load thumbor_tags %}
-Opps Poll
+
+ <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
+ Opps Poll Detail Virgula
 
 <h1>{{ poll.question }}</h1>
 <div>{{ poll.headline|safe }}</div>
+
+{% if poll.main_image %}
 <img src="{% thumbor_url poll.main_image.image.url width=100 %}" />
+{% endif %}
 
 {% if error %}
 <div class="alert alert-error">
@@ -11,9 +16,9 @@ Opps Poll
 </div>
 {% endif %}
 
+
 <form method="post">
     {% csrf_token %}
     {{ poll.form.as_p }}
     <input type="submit" value="Vote">
 </form>
-
