--- a/opps_poll/templates/opps_poll/poll_result.html
+++ b/opps_poll/templates/opps_poll/poll_result.html
@@ -1,13 +1,21 @@
 {% load thumbor_tags %}
-Opps Poll
+ <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
+Opps Poll Result Virgula
 
 <h1>{{ poll.question }}</h1>
 <div>{{ poll.headline|safe }}</div>
+{% if poll.main_image %}
 <img src="{% thumbor_url poll.main_image.image.url width=100 %}" />
+{% endif %}
 
+Total votes: {{poll.vote_count}}
+<br>
+<ul style="width:600px;border-right:1px solid black;">
+{% for choice in poll.choices %}
+    <li>
+        <strong>{{choice.choice}}: </strong>{{ choice.percentage|floatformat }}%<br />
+        <div style="background: #D1B692; border: 1px solid #AD8346; height: 8px; width: {{ choice.percentage|add:"0" }}%;"></div>
+    </li>
+{% endfor %}
+</ul>
 
-<form method="post">
-    {% csrf_token %}
-    {{ poll.form.as_p }}
-    <input type="submit" value="Vote">
-</form>
