--- a/opps_poll/templates/opps_poll/poll_result.html
+++ b/opps_poll/templates/opps_poll/poll_result.html
@@ -1,6 +1,6 @@
 {% load thumbor_tags %}
  <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
-Opps Poll Result Virgula
+Opps Poll Result
 
 <h1>{{ poll.question }}</h1>
 <div>{{ poll.headline|safe }}</div>
