--- a/opps/polls/templates/polls/poll_voted.html
+++ b/opps/polls/templates/polls/poll_voted.html
@@ -1,5 +1,5 @@
 {% load thumbor_tags %}
- <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
+ <a href="{% url 'polls:list_poll'%}">< All polls </a><br/>
  Opps Poll Voted
 
 <h1>{{ poll.question }}</h1>
@@ -19,5 +19,5 @@
 </ul>
 
 {% if poll.show_results %}
- <a href="{% url 'opps_poll:result_poll' slug=poll.slug result='results' %}"> Ver resultados </a><br/>
+ <a href="{% url 'polls:result_poll' slug=poll.slug result='results' %}"> Ver resultados </a><br/>
 {% endif %}
