--- a/opps/polls/templates/polls/poll_detail.html
+++ b/opps/polls/templates/polls/poll_detail.html
@@ -1,6 +1,6 @@
 {% load thumbor_tags %}
 
- <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
+ <a href="{% url 'polls:list_poll'%}">< All polls </a><br/>
  Opps Poll Detail
 
 <h1>{{ poll.question }}</h1>
