--- a/opps/polls/templates/polls/poll_result.html
+++ b/opps/polls/templates/polls/poll_result.html
@@ -1,5 +1,5 @@
 {% load thumbor_tags %}
- <a href="{% url 'opps_poll:list_poll'%}">< All polls </a><br/>
+ <a href="{% url 'polls:list_poll'%}">< All polls </a><br/>
 Opps Poll Result
 
 <h1>{{ poll.question }}</h1>
