--- a/opps/polls/templates/polls/poll_closed.html
+++ b/opps/polls/templates/polls/poll_closed.html
@@ -1,11 +1,11 @@
-{% load thumbor_tags %}
+{% load images_tags %}
  <a href="{% url 'polls:list_poll'%}">< All polls </a><br/>
 Opps Poll Result
 
 <h1>{{ poll.question }}</h1>
 <div>{{ poll.headline|safe }}</div>
 {% if poll.main_image %}
-<img src="{% thumbor_url poll.main_image.image.url width=100 %}" />
+<img src="{% images_url poll.main_image.image.url width=100 %}" />
 {% endif %}
 
 This pool is not opened for voting or results
