--- a/opps/polls/templates/polls/poll_list.html
+++ b/opps/polls/templates/polls/poll_list.html
@@ -1,4 +1,4 @@
-{% load thumbor_tags %}
+{% load images_tags %}
 {% load endless %}
 Opps Poll List
 
@@ -7,7 +7,7 @@ Opps Poll List
   {% for poll in polls %}
   <li>
     {% if poll.main_image %}
-    <img src="{% thumbor_url poll.main_image.image.url width=10 %}" />
+    <img src="{% image_url poll.main_image.image.url width=10 %}" />
     {% endif %}
     <a href="{% url 'polls:open_poll' poll.slug %}" alt="{{ poll.question }}">{{ poll.question }}</a>
   </li>
