Migrate app to opps 0.2

--- a/opps/polls/templates/polls/poll_list.html
+++ b/opps/polls/templates/polls/poll_list.html
@@ -9,7 +9,7 @@ Opps Poll List
     {% if poll.main_image %}
     <img src="{% image_url poll.main_image.image.url width=10 %}" />
     {% endif %}
-    <a href="{% url 'polls:open_poll' poll.slug %}" alt="{{ poll.question }}">{{ poll.question }}</a>
+    <a href="{% url 'polls:open_poll' poll.slug %}" alt="{{ poll.title }}">{{ poll.title|title }}</a>
   </li>
   {% empty %}
          No polls
